src/style/Home/backers.scss
.backers-scroll {
    margin: 0 auto;
    width: 100%;
    overflow: hidden;
    position: relative;
}

.backers_content {
    width: 300% !important;
    display: flex;
    animation: backers_card 80s linear infinite forwards;
    &:hover {
        animation-play-state: paused;
    }
}

@keyframes backers_card {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-66.6%);
    }
}

